--- a/app/src/main/res/layout/activity_room_list.xml
+++ b/app/src/main/res/layout/activity_room_list.xml
@@ -42,7 +42,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rmRecycRooms"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="100dp" />
 
 </LinearLayout>
