Added personal message dialog

--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -14,6 +14,13 @@
         android:textSize="40sp"
         />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:text="@string/text_members"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/chatRmRecycMembs"
         android:layout_width="match_parent"
@@ -25,6 +32,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/edt_chat_message"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:text="@string/text_messages"
         />
 
     <androidx.recyclerview.widget.RecyclerView
