--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -11,7 +11,7 @@
 
     <TextView
         android:id="@+id/chItmTxt"
-        android:layout_width="80dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="loading"
         />
