Added handling for socket errors to move back to the home screen

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,4 +21,11 @@
         android:text="@string/btn_send"
         />
 
+    <TextView
+        android:id="@+id/mainTxtErr"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/error"
+        />
+
 </LinearLayout>
