--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -14,6 +14,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="loading"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
         />
 
 
