--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -5,19 +5,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="12dp"
     tools:context=".activities.RoomActivity">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:gravity="center"
+        android:text="@string/in_room_title"
+        />
 
     <TextView
         android:id="@+id/chatRmTxtTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="40sp"
+        android:textSize="30sp"
+        android:gravity="center"
         />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
+        android:padding="4dp"
+        android:gravity="center"
         android:text="@string/text_members"
         />
 
