--- a/app/src/main/res/layout/diag_password.xml
+++ b/app/src/main/res/layout/diag_password.xml
@@ -33,9 +33,9 @@
                 android:id="@+id/pwDiagEdtPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/enter_room_password"
                 android:layout_below="@id/pwDiagTitle"
-                />
+                android:inputType="textPassword"
+                 />
 
             <TextView
                 android:id="@+id/pwDiagTxtErr"
