--- a/app/src/main/res/layout/member_item.xml
+++ b/app/src/main/res/layout/member_item.xml
@@ -4,7 +4,14 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:id="@+id/memberItem"
+    android:gravity="center"
     >
+
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/ic_person"
+        />
 
     <TextView
         android:id="@+id/membItmName"
